--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -32,6 +32,12 @@ jobs:
     
         - name: Unit Testing
           run: npm test
+
+        - name: Cache NPM dependencies
+          uses: actions/cache@v4
+          with:
+            path: ~/.npm
+            key: ${{ runner.os }}-node-modules-${{ hashFiles('package-lock.jsons') }} 
           
         - name: Archive Test Result
           uses: actions/upload-artifact@v4
