--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -31,7 +31,7 @@ jobs:
           uses: actions/cache@v4
           with:
             path: ~/.npm
-            key: ${{ runner.os }}-node-modules-${{ hashFiles('package-lock.jsons') }}  
+            key: ${{ runner.os }}-node-modules-${{ hashFiles('package-lock.json') }}  
         - name: Archive Test Result
           uses: actions/upload-artifact@v4
           with:
